# computer_engineering_project

./: .gitignore  .gitleaks.toml  CLAUDE.md  LICENSE  THESIS_DEFENSE_QA.md  THESIS_DEFENSE_QA_VI.md  phase1_20251221_000414.txt  phase2_20251221_000414.txt  prompt_template.md
Autosar_SecOC/: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  DEPLOYMENT.md  DIAGRAMS.md  DOCUMENTATION_LINKING_STRATEGY.md  ETHERNET_PLATFORM_ANALYSIS.md  PQC_IMPLEMENTATION_ROADMAP.md  PQC_RESEARCH.md  QUICK_START.md  README.md  TECHNICAL_REPORT.md  TEST_COMMANDS.md  THESIS_VALIDATION_REPORT.md  aspice-audit.json  build_and_run.sh  build_liboqs.sh  build_perf.sh  build_test_pqc.sh  deploy_pqc_gui.sh  export_diagrams.py  homologation-check.json  iso26262-checklist.json  mldsa_secoc.key  mldsa_secoc.pub  pqc_advanced_results.csv  pqc_performance_results.csv  pqc_premium_dashboard.py  pqc_secoc_integration_results.csv  pqc_standalone_results.csv  rebuild_pqc.sh  run_tests.sh  test_autosar_integration_comprehensive.c  test_performance.c  test_phase3_complete_ethernet_gateway.c  test_pqc.c  test_pqc_comprehensive_detailed.c  test_pqc_secoc_integration_backup.c  test_pqc_secoc_integration_clean.c  (+4 more)
Autosar_SecOC/.claude/: settings.local.json
Autosar_SecOC/GUI/: PQC_MODE_INSTRUCTIONS.md  PQC_TESTING_GUIDE.md  main.py  main_window.py  mydialog.py  qtexteditlogger.py  requirements.txt  simple_gui.py  simple_gui_pqc.py  ui.py
Autosar_SecOC/GUI/config/: __init__.py  settings.py  theme.py
Autosar_SecOC/GUI/core/: __init__.py  app_state.py  data_models.py  topology.py
Autosar_SecOC/GUI/pages/: __init__.py  attack_sim.py  dashboard.py  gateway_sim.py  key_exchange.py  performance.py  routing.py  secoc_auth.py
Autosar_SecOC/GUI/widgets/: __init__.py  common.py  log_console.py  zone_config_dialog.py
Autosar_SecOC/archive_docs/: BUILD_GUIDE.md  COMPLETE_SIGNAL_EVALUATION.md  COMPLETE_TEST_REPORT.md  COMPREHENSIVE_LOGGING_SYSTEM.md  ETHERNET_FOCUS_SUMMARY.md  LOGGING_IMPLEMENTATION_SUMMARY.md  PQC_ENHANCEMENT_PLAN.md  PROJECT_GUIDE.md  SIGNAL_FLOW_ANALYSIS.md  SYSTEM_OVERVIEW.md  TESTING_DOCUMENTATION.md  TESTING_QUICK_REFERENCE.md
Autosar_SecOC/commands/: README.md
Autosar_SecOC/commands/compliance/: README.md  aspice-audit.sh  common.sh  generate_compliance_report.py  homologation-check.sh  iso26262-checklist.sh  misra-report.sh  run-all.sh  unr155-assess.sh
Autosar_SecOC/compliance_reports/: LATEST.txt  latest
Autosar_SecOC/compliance_reports/20260407_122135/: misra-cppcheck.txt
Autosar_SecOC/compliance_reports/20260407_122210/: misra-cppcheck-clean.txt  misra-cppcheck.txt  misra-main-violations.txt  misra-metrics-integrity.txt  misra-summary.json
Autosar_SecOC/docs/: AGENTS.md  ARCHITECTURE.md  CENTRAL_COMPUTING_PI.md  COMPLIANCE_TRACEABILITY_MATRIX.md  DEFENSE_MISRA_MITIGATION_TABLE.md  DIAGRAMS.md  DIAGRAMS_THESIS.md  FINAL_CLEANUP_COMPLETE.md  HARDWARE_PQC_QUICK_START.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PI4_DEPLOYMENT.md  SAST_MISRA_DEVIATION_LOG.md  TECHNICAL_REPORT.md  TEST_SCENARIOS_AND_RESULTS.md  wrapup.md
Autosar_SecOC/docs/images/: .gitignore
Autosar_SecOC/include/: Std_Types.h
Autosar_SecOC/include/ApBridge/: ApBridge.h
Autosar_SecOC/include/BswM/: BswM.h
Autosar_SecOC/include/Can/: Can.h  CanIF.h  CanTP.h
Autosar_SecOC/include/CanNm/: CanNm.h
Autosar_SecOC/include/CanSM/: CanSM.h
Autosar_SecOC/include/Com/: Com.h  ComStack_Types.h  Com_Lcfg.h  Com_PBcfg.h
Autosar_SecOC/source/: main.c
Autosar_SecOC/test/: ApBridgeTests.cpp  AuthenticationTests.cpp  BswMTests.cpp  CMakeLists.txt  CanIfTests.cpp  CanNmTests.cpp  CanSMTests.cpp  CanTpTests.cpp  ComMTests.cpp  ComTests.cpp  CryIfTests.cpp  CsmTests.cpp  DcmTests.cpp  DemTests.cpp  DetTests.cpp  DirectRxTests.cpp  DirectTxTests.cpp  EaTests.cpp  EcuMTests.cpp  EncryptTests.cpp  EthIfTests.cpp  EthSMTests.cpp  FeeTests.cpp  FreshnessTests.cpp  KeyDerivationTests.cpp  KeyExchangeTests.cpp  McalTests.cpp  MemIfTests.cpp  NvMTests.cpp  OsTests.cpp  PQC_ComparisonTests.cpp  PduRTests.cpp  SecOCExtTests.cpp  SecOCIntegrationTests.cpp  SecOCTests.cpp  SoAdPqcTests.cpp  SoAdTests.cpp  TcpIpTests.cpp  UdpNmTests.cpp  VerificationTests.cpp  (+8 more)
Autosar_SecOC/test_logs/: MASTER_THESIS_VALIDATION_20251115_193058.txt  MASTER_THESIS_VALIDATION_20251116_122308.txt  phase1_20251220_151831.txt  phase1_20260105_091729.txt  phase1_20260105_091925.txt  phase1_pqc_fundamentals_20251115_192204.txt  phase1_pqc_fundamentals_20251116_122156.txt  phase2_20251220_151831.txt  phase2_20260105_091729.txt  phase2_20260105_091925.txt  phase2_google_test_suite_20251115_192221.txt  phase2_google_test_suite_20251116_122209.txt  phase3_20251220_151831.txt  phase3_20260105_091729.txt  phase3_20260105_091925.txt  phase3_autosar_integration_20251115_192401.txt  phase3_complete_ethernet_gateway_20251116_122241.txt  phase4_20251220_151831.txt  phase4_20260105_091729.txt  phase4_20260105_091925.txt  phase4_system_validation_20251115_192516.txt  phase4_system_validation_20251116_122306.txt
integrated_simulation_env/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  THESIS_DEFENSE_QA.md  THESIS_RESEARCH.md  USAGE.md  build.sh  run_all_scenarios.sh
integrated_simulation_env/config/: buses.json  scenarios.json  signals.json
integrated_simulation_env/docs/: ATTACK_PLAYBOOK.md  RESULTS_FORMAT.md  SIGNAL_CATALOGUE.md
integrated_simulation_env/include/: sim_attacker.h  sim_bus.h  sim_clock.h  sim_ecu.h  sim_logger.h  sim_metrics.h  sim_runner.h  sim_signals.h
integrated_simulation_env/reports/: build_sws_traceability.py  compare_environments.py  generate_thesis_report.py
integrated_simulation_env/scenarios/: sc_attacks.c  sc_baseline.c  sc_bus_failure.c  sc_common.c  sc_deadline_stress.c  sc_flexray_baseline.c  sc_freshness_overflow.c  sc_keymismatch.c  sc_mixed_bus.c  sc_multi_ecu.c  sc_persistence.c  sc_rekey.c  sc_replay_boundary.c  sc_rollover.c  sc_throughput.c  sc_verify_disabled.c  scenario_runner.c
integrated_simulation_env/src/: sim_attacker.c  sim_bus.c  sim_clock.c  sim_ecu.c  sim_logger.c  sim_metrics.c  sim_signals.c
(+862 files in other folders)
